[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Zmf96 <zmf96@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^5.2.3"}
loguru = "^0.6.0"
bs4 = "^0.0.1"
requests = "^2.27.1"
lxml = "^4.7.1"
redis = "^4.1.3"
celery-flower = "^1.0.1"
flower = "^1.0.0"
fabric = "^2.6.0"
pymongo = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
