[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Zmf96 <zmf96@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^5.2.3"}
loguru = "^0.6.0"
bs4 = "^0.0.1"
requests = "^2.27.1"
lxml = "^4.7.1"
redis = "^4.1.3"
celery-flower = "^1.0.1"
flower = "^1.0.0"
fabric = "^2.6.0"
pika = "^1.2.0"
mongoengine = "^0.23.1"
dnspython = "^2.2.0"
geoip2 = "^4.5.0"
termcolor = "^1.1.0"
dnslib = "^0.9.19"
subdomain = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
