[tool.poetry]
name = "hotfinger"
version = "0.1.1"
description = ""
authors = ["zmf96 <zmf96@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-Wappalyzer = "^0.3.1"
webanalyzer = "^2019.8.22"
bs4 = "^0.0.1"
loguru = "^0.6.0"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
